--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": [
     "reactjs"
   ],
-  "author": "Maximilian Schwarzmueller",
+  "author": "Quentin Monmert",
   "license": "MIT",
   "dependencies": {
     "react": "^15.2.1",
